--- a/TFC/imports/UI/user/register.html
+++ b/TFC/imports/UI/user/register.html
@@ -1,30 +1,47 @@
 <template name="register">
     <h2 class="title">Inscription</h2>
     <form id="register">
-        <p class="control has-icons-left">
-            <input type="text" class="input" name="username" id="username" placeholder="Nom d'utilisateur" required/>
-            <span class="icon is-left">
-                <i class="fas fa-user-circle"></i>
-            </span>
-        </p>
-        <p class="control has-icons-left">
-            <input type="email" class="input" name="email" id="email" placeholder="Email" required>
-            <span class="icon is-left">
-                <i class="fas fa-envelope"></i>
-            </span>
-        </p>
-        <p class="control has-icons-left">
-            <input type="password" class="input" name="password" id="password" placeholder="Mot de passe"  autocomplete="new-password" required>
-            <span class="icon is-left">
-                <i class="fas fa-lock"></i>
-            </span>
-        </p>
-        <p class="control has-icons-left">
-            <input type="password" class="input" name="confirmPassword" id="confirmPassword" placeholder="Confirmer le mot de passe" autocomplete="new-password" required>
-            <span class="icon is-left">
-                <i class="fas fa-lock"></i>
-            </span>
-        </p>
+
+        <div class="field" id="usernameField">
+            <div class="control has-icons-left">
+                <input type="text" class="input" name="username" id="username" placeholder="Nom d'utilisateur" required/>
+                <span class="icon is-left">
+                    <i class="fas fa-user-circle"></i>
+                </span>
+            </div>
+            <p class="help is-success"></p>
+            <p class="help is-danger"></p>
+        </div>
+
+        <div class="field" id="emailField">
+            <div class="control has-icons-left">
+                <input type="email" class="input" name="email" id="email" placeholder="Email" required>
+                <span class="icon is-left">
+                    <i class="fas fa-envelope"></i>
+                </span>
+            </div>
+            <p class="help is-success"></p>
+            <p class="help is-danger"></p>
+        </div>
+
+        <div class="field">
+            <div class="control has-icons-left">
+                <input type="password" class="input" name="password" id="password" placeholder="Mot de passe" autocomplete="new-password" required>
+                <span class="icon is-left">
+                    <i class="fas fa-lock"></i>
+                </span>
+            </div>
+        </div>
+
+        <div class="field">
+            <div class="control has-icons-left">
+                <input type="password" class="input" name="confirmPassword" id="confirmPassword" placeholder="Confirmer le mot de passe" autocomplete="new-password" required>
+                <span class="icon is-left">
+                    <i class="fas fa-lock"></i>
+                </span>
+            </div>
+        </div>
+
         <br>
         <button type="submit" id="submitForm" class="button is-success">Valider</button>
     </form>
