--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -104,6 +104,10 @@
                 </div>
 
                 <button class="button">Partager la page du produit sur les réseaux sociaux</button>
+                <button class="button has-text-danger">
+                    <span><i class="fas fa-exclamation-triangle"></i></span>
+                    <p>Signaler</p>
+                </button>
                 <button class="button">Lien vers la page du magasin / site</button>
             </div>
         </div>
