--- a/TFC/imports/UI/manageShop.html
+++ b/TFC/imports/UI/manageShop.html
@@ -1,24 +1,31 @@
 <template name="manageShop">
     <h3 class="title">Ajouter un magasin</h3>
     <form id="newShop">
-        <input name="shopName" type="text" placeholder="Nom du magasin" class="input" required>
 
-        <input name="shopDescription" type="textarea" placeholder="Description du magasin" class="input" required>
-
-        <div class="file has-name is-boxed">
-            <label class="file-label">
-                <input class="file-input" type="file" name="shopPictures" id="shopPictures" accept="image/*" multiple>
-                <span class="file-cta">
-                    <span class="file-icon">
-                        <i class="fas fa-file-image"></i>
-                    </span>
-                    <span class="file-label">Choisir un fichier…</span>
-                </span>
-                <span class="file-name" style="text-align: center;">Aucun fichier sélectionné</span>
-            </label>
+        <div class="field">
+            <input name="shopName" type="text" placeholder="Nom du magasin" class="input" required>
         </div>
 
-        <div>
+        <div class="field">
+            <textarea name="shopDescription" class="textarea" placeholder="Description du magasin" required></textarea>
+        </div>
+
+        <div class="field">
+            <div class="file has-name is-boxed">
+                <label class="file-label">
+                    <input class="file-input" type="file" name="shopPictures" id="shopPictures" accept="image/*" multiple>
+                    <span class="file-cta">
+                        <span class="file-icon">
+                            <i class="fas fa-file-image"></i>
+                        </span>
+                        <span class="file-label">Choisir un fichier…</span>
+                    </span>
+                    <span class="file-name" style="text-align: center;">Aucun fichier sélectionné</span>
+                </label>
+            </div>
+        </div>
+
+        <div class="field">
             <input type="checkbox" class="checkbox" id="cat1" name="category" value="1">
             <label for="cat1">Catégorie 1</label>
             <input type="checkbox" class="checkbox" id="cat2" name="category" value="2">
