--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -102,6 +102,10 @@
                 {{/each}}
                 </div>
                 <button class="button"> Partager la page du produit sur les réseaux sociaux</button>
+                <button class="button has-text-danger">
+                    <span><i class="fas fa-exclamation-triangle"></i></span>
+                    <p>Signaler</p>
+                </button>
                 <button class="button">Lien vers la page du magasin / site</button>
             </div>
         </div>
