Texte pour phrase d'accroche simple et courte. Suppression du texte au dessus du comptage de produits et de magasins.

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -3,7 +3,7 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <p class="title">PLEXAR</p>
-                <p class="subtitle">PHRASE D'ACCROCHE SIMPLE ET COURTE</p>
+                <p class="subtitle">Bienvenue sur le site Plexar, il s’agit d’une plateforme participative qui permet aux utilisateurs d’acheter des produits respectant certains critères dans des commerces à proximité de chez eux.</p>
                 <form id="searchForm">
                     <div class="field has-addons" style="justify-content: center;">
                         <div class="control" style="width: 25em; max-width: 100%;">
@@ -21,7 +21,7 @@
     </section>
 
     <p>
-         Bonjour bienvenue sur EKOTOPIA, il s'agit d'une plateforme reposant sur un système participatif où les utilisateurs peuvent acheter et proposer des produits dans le commerce à proximité de chez eux. Cela permet aux client de réduire leur impact en dioxyde de carbone et ainsi d'acheter des produits de façon plus durable pour l'environnement.
+         Texte à refaire.
         <br>
         Nous comptons actuellement {{productsCounter}} produits dans notre base de données.<br>
         Nous comptons actuellement {{shopsCounter}} magasins dans notre base de données.
