Changement du texte

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -3,7 +3,7 @@
         <div class="hero-body">
             <div class="container has-text-centered">
                 <p class="title">PLEXAR</p>
-                <p class="subtitle">Bienvenue sur le site Plexar, il s’agit d’une plateforme participative qui permet aux utilisateurs d’acheter des produits respectant certains critères dans des commerces à proximité de chez eux.</p>
+                <p class="subtitle">Bienvenue sur le site Plexar, il s’agit d’une plateforme participative qui permet aux utilisateurs de proposer et d’acheter des produits respectant certains critères dans des commerces à proximité de chez eux.</p>
                 <form id="searchForm">
                     <div class="field has-addons" style="justify-content: center;">
                         <div class="control" style="width: 25em; max-width: 100%;">
