installing bulma extensions, started newsletter subscription

--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -37,6 +37,11 @@
                 </label>
             </div>
 
+            <div class="field">
+                <input class="switch is-rounded" type="checkbox" id="newsletter" name="newsletter">
+                <label for="newsletter">Recevoir la newsletter</label>
+            </div>
+
             <br><br>
 
             <button type="button" id="showAdvancedEdition" class="button">Options avancées</button>
