--- a/TFC/imports/UI/user/register.html
+++ b/TFC/imports/UI/user/register.html
@@ -42,6 +42,11 @@
             </div>
         </div>
 
+        <div class="field">
+            <input type="checkbox" class="is-checkradio" id="newsletter" name="newsletter" value="newsletter">
+            <label for="newsletter">S'abonner à la newsletter (pas plus d'un email par mois)</label>
+        </div>
+
         <br>
         <button type="submit" id="submitForm" class="button is-success">Valider</button>
     </form>
