--- a/TFC/imports/UI/user/register.html
+++ b/TFC/imports/UI/user/register.html
@@ -2,9 +2,10 @@
     <h2 class="title">Inscription</h2>
     <form id="register">
 
-        <div class="field" id="usernameField">
+        <div class="field has-animated-label" id="usernameField">
             <div class="control has-icons-left">
-                <input type="text" class="input" name="username" id="username" placeholder="Nom d'utilisateur" required/>
+                <input type="text" class="input has-animated-label" name="username" id="username" placeholder=" " required/>
+                <label for="username" class="label is-animated">Nom d'utilisateur</label>
                 <span class="icon is-left">
                     <i class="fas fa-user-circle"></i>
                 </span>
@@ -13,9 +14,10 @@
             <p class="help is-danger"></p>
         </div>
 
-        <div class="field" id="emailField">
+        <div class="field has-animated-label" id="emailField">
             <div class="control has-icons-left">
-                <input type="email" class="input" name="email" id="email" placeholder="Email" required>
+                <input type="email" class="input has-animated-label" name="email" id="email" placeholder=" " required>
+                <label for="email" class="label is-animated">Email</label>
                 <span class="icon is-left">
                     <i class="fas fa-envelope"></i>
                 </span>
@@ -24,18 +26,20 @@
             <p class="help is-danger"></p>
         </div>
 
-        <div class="field">
+        <div class="field has-animated-label">
             <div class="control has-icons-left">
-                <input type="password" class="input" name="password" id="password" placeholder="Mot de passe" autocomplete="new-password" required>
+                <input type="password" class="input has-animated-label" name="password" id="password" placeholder=" " autocomplete="new-password" required>
+                <label for="password" class="label is-animated">Mot de passe</label>
                 <span class="icon is-left">
                     <i class="fas fa-lock"></i>
                 </span>
             </div>
         </div>
 
-        <div class="field">
+        <div class="field has-animated-label">
             <div class="control has-icons-left">
-                <input type="password" class="input" name="confirmPassword" id="confirmPassword" placeholder="Confirmer le mot de passe" autocomplete="new-password" required>
+                <input type="password" class="input has-animated-label" name="confirmPassword" id="confirmPassword" placeholder=" " autocomplete="new-password" required>
+                <label for="confirmPassword" class="label is-animated">Confirmer le mot de passe</label>
                 <span class="icon is-left">
                     <i class="fas fa-lock"></i>
                 </span>
@@ -44,7 +48,7 @@
 
         <div class="field">
             <input type="checkbox" class="is-checkradio" id="newsletter" name="newsletter" value="newsletter">
-            <label for="newsletter">S'abonner à la newsletter (pas plus d'un email par mois)</label>
+            <label for="newsletter" class="label">S'abonner à la newsletter (pas plus d'un email par mois)</label>
         </div>
 
         <br>
