removing advanced options in edit profile

--- a/TFC/imports/UI/manageProduct.html
+++ b/TFC/imports/UI/manageProduct.html
@@ -2,8 +2,9 @@
     <h3 class="title">Ajouter un produit</h3>
     <form id="newProduct">
 
-        <div class="field">
-            <input name="productName" type="text" placeholder="Nom du produit" class="input" required>
+        <div class="field has-animated-label">
+            <input type="text" class="input has-animated-label" name="productName" id="productName" placeholder=" " required>
+            <label for="productName" class="label is-animated">Nom du produit</label>
         </div>
 
         <div class="field">
