--- a/TFC/imports/UI/user/login.html
+++ b/TFC/imports/UI/user/login.html
@@ -4,7 +4,7 @@
 
         <div class="field has-animated-label">
             <p class="control has-icons-left">
-                <input class="input has-animated-label" type="email" name="email" placeholder=" " required>
+                <input class="input has-animated-label" type="email" name="email" id="email" placeholder=" " required>
                 <label for="email" class="label is-animated">Email</label>
                 <span class="icon is-left">
                     <i class="fas fa-envelope"></i>
@@ -14,7 +14,7 @@
 
         <div class="field has-animated-label">
             <p class="control has-icons-left">
-                <input type="password" class="input has-animated-label" name="password" placeholder=" " autocomplete="current-password" required>
+                <input type="password" class="input has-animated-label" name="password" id="password" placeholder=" " autocomplete="current-password" required>
                 <label for="password" class="label is-animated">Mot de passe</label>
                 <span class="icon is-left">
                     <i class="fas fa-lock"></i>
