--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -24,7 +24,6 @@
          Texte à refaire.
         <br>
         Nous comptons actuellement {{productsCounter}} produits dans notre base de données.<br>
-        Nous comptons actuellement {{shopsCounter}} magasins dans notre base de données.
     </p>
 
 
@@ -35,7 +34,7 @@
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <article class="tile is-child notification is-info">
-                        <p class="title">Magasins en vogue</p>
+                        <p class="title">Produit en vogue</p>
                         <p class="subtitle">With an image</p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
@@ -48,7 +47,7 @@
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <article class="tile is-child notification is-info">
-                        <p class="title">Produits en vogue</p>
+                        <p class="title">Produit en vogue</p>
                         <p class="subtitle">With an image</p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
@@ -61,7 +60,7 @@
             <div class="tile is-ancestor">
                 <div class="tile is-parent">
                     <article class="tile is-child notification is-info">
-                        <p class="title">Autour de moi</p>
+                        <p class="title">Produit en vogue</p>
                         <p class="subtitle">With an image</p>
                         <figure class="image is-4by3">
                             <img src="https://bulma.io/images/placeholders/640x480.png">
@@ -71,7 +70,5 @@
             </div>
         </div>
     </div>
-
-    <br>
 
 </template>
