--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -19,13 +19,13 @@
             </div>
         </div>
     </section>
-    
+
     <hr style="margin: 0;">
 
     <p>
          Texte à refaire.
         <br>
-        Nous comptons actuellement {{productsCounter}} produits dans notre base de données.<br>
+        Nous comptons actuellement {{productsCounter}} produits dans notre base de données.
     </p>
 
 
